--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -48,37 +48,41 @@
     </header>
     <main>
         <div class="banner">
-            <div>
-                <span>html5,css3</span>
-                <span>html5,css3</span>
-                <span>html5,css3</span>
-            </div>
+            <span class="title">html5,css3</span>
+            <span class="title2">EXPECT THE UNEXPECTED</span>
+            <span class="title3">Be distinct</span>
         </div>
         <div class="box content clear">
             <section class="comments">
                 <h2 class="title">What They Said About Us</h2>
                 <ul class="block clear">
                     <li class="slide_comment">
-                        <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <img src="images/4.jpg" alt="" />
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                     <li class="slide_comment">
-                        <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <img src="images/4.jpg" alt="" />
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                 </ul>
-                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus
+                    quis metus imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
+                    porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
+                    lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
+                    sit.</p>
             </section>
             <section class="skills">
                 <h2 class="title">Our Skills</h2>
@@ -143,7 +147,7 @@
                 <ul class="filterbox clear">
                     <li>
                         <a href="#">
-                            <img src="images/1.jpg" alt='' />
+                            <img src="images/1.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -152,7 +156,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/2.jpg" alt='' />
+                            <img src="images/2.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -161,7 +165,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/3.jpg" alt='' />
+                            <img src="images/3.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -170,7 +174,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/5.jpg" alt='' />
+                            <img src="images/5.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -179,7 +183,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/5.jpg" alt='' />
+                            <img src="images/5.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -188,7 +192,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="images/6.jpg" alt='' />
+                            <img src="images/6.jpg" alt="" />
                         </a>
                         <a href="#">
                             <h3>Project Title</h3>
@@ -202,10 +206,14 @@
         <section class="team">
             <div class="content">
                 <h2 class="title center">What is our team structure?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus
+                    imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
+                    porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
+                    lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
+                    sit.</p>
                 <ul class="team-img clear">
                     <li>
                         <img src="images/pep.jpg" alt="" />
@@ -232,7 +240,8 @@
                 <i class="fa-leaf"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.
                 </p>
                 <a href="">REad More</a>
@@ -241,7 +250,8 @@
                 <i class="fa-recycle"></i>
                 <span>Inspiring</span>
                 <h3>Graphic Design</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
@@ -249,7 +259,8 @@
                 <i class="fa-puzzle"></i>
                 <span>Implementing</span>
                 <h3>The Template</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
@@ -257,7 +268,8 @@
                 <i class="fa-legal"></i>
                 <span>Testing</span>
                 <h3>Functionality</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
@@ -267,8 +279,10 @@
                 <h2 class="title center">
                     Pricing Tables
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae adipiscing
-                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae adipiscing
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae
+                    adipiscing
+                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
+                    adipiscing
                     diam ultrices nec.
                 </p>
                 <div class="wrap-box clear">
@@ -388,7 +402,7 @@
                         <input type="reset" class="btn" value="Reset">
                     </div>
                 </form>
-                <div class='map'>
+                <div class="map">
                     <div id="map-canvas"></div>
                 </div>
             </div>
@@ -515,7 +529,8 @@
             </div>
             <div class="footer-menu clear">
                 <div class="logo"></div>
-                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.</p>
+                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to
+                    our newsletter.</p>
                 <form class="action">
                     <input type="email" value name="EMAIL" placeholder="Enter your Email">
                     <input type="submit" value="Send">
