--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="function.js"></script>
+    <script src="function.js"></script>
 </head>
 
 <body>
@@ -58,8 +58,7 @@
                 <ul class="block clear">
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt="" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
-                            amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
@@ -67,22 +66,14 @@
                     </li>
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt="" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
-                            amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                 </ul>
-                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus
-                    quis metus imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
-                    porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
-                    lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
-                    sit.</p>
+                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
             </section>
             <section class="skills">
                 <h2 class="title">Our Skills</h2>
@@ -236,7 +227,6 @@
         </section>
         <ul class="service-box content clear">
             <li>
-                <!-------------Если вставить разные иконки, есть смысл оставить класс fa?---------------->
                 <i class="fa-leaf"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
@@ -370,7 +360,6 @@
             </div>
         </section>
         <section class="get-in">
-            <!-------------------------------Это для фона---------------------------------------------->
             <div class="content clear">
                 <h2 class="title center">Get In Touch</h2>
                 <form class="user-signin">
