--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -223,37 +223,28 @@
                 <i class="fa-leaf"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.
-                </p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
                 <i class="fa-recycle"></i>
                 <span>Inspiring</span>
                 <h3>Graphic Design</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-puzzle"></i>
+                <i class="fa-puzzle-piece"></i>
                 <span>Implementing</span>
                 <h3>The Template</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
                 <i class="fa-legal"></i>
                 <span>Testing</span>
                 <h3>Functionality</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
         </ul>
