--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -58,7 +58,8 @@
                 <ul class="block clear">
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt="" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
@@ -66,14 +67,19 @@
                     </li>
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt="" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                 </ul>
-                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus
+                    quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit,
+                    dapibus ac augue ut,porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, apibus ac augue ut,
+                    porttitor viverra dui. Lorem ipsum dolor sit.</p>
             </section>
             <section class="skills">
                 <h2 class="title">Our Skills</h2>
@@ -197,7 +203,11 @@
         <section class="team">
             <div class="content">
                 <h2 class="title center">What is our team structure?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus
+                    imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac
+                    augue ut, porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum.
+                    Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor
+                    viverra dui. Lorem ipsum dolor sit.</p>
                 <ul class="team-img clear">
                     <li>
                         <img src="images/pep.jpg" alt="" />
@@ -223,124 +233,115 @@
                 <i class="fa-leaf"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
+                    elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
                 <i class="fa-recycle"></i>
                 <span>Inspiring</span>
                 <h3>Graphic Design</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
+                    elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
                 <i class="fa-puzzle-piece"></i>
                 <span>Implementing</span>
                 <h3>The Template</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
+                    elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
                 <i class="fa-legal"></i>
                 <span>Testing</span>
                 <h3>Functionality</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi
+                    elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
         </ul>
         <section class="pricing">
             <div class="content">
-                <h2 class="title center">
-                    Pricing Tables
-                </h2>
+                <h2 class="title center">Pricing Tables</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae
-                    adipiscing
-                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
-                    adipiscing
-                    diam ultrices nec.
-                </p>
-                <div class="wrap-box clear">
-                    <div class="pricing-table">
+                    adipiscing diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris,
+                    vitae adipiscing diam ultrices nec.</p>
+                <ul class="wrap-box clear">
+                    <li class="pricing-table">
                         <div class="tablehead">
-                            <h3 class="plan-title">Basic Plan</h3>
-                            <i class="fa"></i>
+                            <h3>Basic Plan</h3>
+                            <i class="fa-leaf"></i>
                         </div>
                         <ul>
-                            <li class="price">
-                                <span>$9.50</span>/month</li>
+                            <li class="price"><span>$9.50</span>/month</li>
                             <li>Base Package</li>
                             <li>No support</li>
                             <li>10 Email Address</li>
                             <li>10 GB Bandwidth</li>
                             <li>5 GB Diskspace</li>
                             <li class="button">
-                                <a href="#" class="btn">
-                                    Sign up
-                                </a>
+                                <a href="#">Sign up</a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="pricing-table">
+                    </li>
+                    <li class="pricing-table">
                         <div class="tablehead">
-                            <h3 class="plan-title">Premium Plan</h3>
-                            <i class="fa"></i>
+                            <h3>Premium Plan</h3>
+                            <i class="fa-leaf"></i>
                         </div>
                         <ul>
-                            <li class="price">
-                                <span>$9.50</span>/month</li>
+                            <li class="price"><span>$9.50</span>/month</li>
                             <li>Base Package</li>
                             <li>No support</li>
                             <li>10 Email Address</li>
                             <li>10 GB Bandwidth</li>
                             <li>5 GB Diskspace</li>
                             <li class="button">
-                                <a href="#" class="btn">
-                                    Sign up
-                                </a>
+                                <a href="#">Sign up</a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="selected">
+                    </li>
+                    <li class="pricing-table selected">
                         <div class="tablehead">
-                            <h3 class="plan-title">Corporate Plan</h3>
-                            <i class="fa"></i>
+                            <h3>Corporate Plan</h3>
+                            <i class="fa-leaf"></i>
                         </div>
                         <ul>
-                            <li class="price">
-                                <span>$9.50</span>/month</li>
-                            <li class="even">Base Package</li>
-                            <li>No support</li>
-                            <li class="even">10 Email Address</li>
-                            <li>10 GB Bandwidth</li>
-                            <li class="even">5 GB Diskspace</li>
-                            <li class="button">
-                                <a href="#" class="btn">
-                                    Sign up
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="pricing-table">
-                        <div class="tablehead">
-                            <h3 class="plan-title">Golden Plan</h3>
-                            <i class="fa"></i>
-                        </div>
-                        <ul>
-                            <li class="price">
-                                <span>$9.50</span>/month</li>
+                            <li class="price"><span>$9.50</span>/month</li>
                             <li>Base Package</li>
                             <li>No support</li>
                             <li>10 Email Address</li>
                             <li>10 GB Bandwidth</li>
                             <li>5 GB Diskspace</li>
                             <li class="button">
-                                <a href="#" class="btn">
-                                    Sign up
-                                </a>
+                                <a href="#">Sign up</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
+                    </li>
+                    <li class="pricing-table">
+                        <div class="tablehead">
+                            <h3>Golden Plan</h3>
+                            <i class="fa-leaf"></i>
+                        </div>
+                        <ul>
+                            <li class="price"><span>$9.50</span>/month</li>
+                            <li>Base Package</li>
+                            <li>No support</li>
+                            <li>10 Email Address</li>
+                            <li>10 GB Bandwidth</li>
+                            <li>5 GB Diskspace</li>
+                            <li class="button">
+                                <a href="#">Sign up</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="get-in">
