get in touch commit

--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -347,34 +347,35 @@
         <section class="get-in">
             <div class="content clear">
                 <h2 class="title center">Get In Touch</h2>
-                <form class="user-signin">
-                    <div class="form-input clear">
-                        <label>First name
-                            <span class="required">*</span>
-                        </label>
-                        <input type="text" required="">
-                    </div>
-                    <div class="form-input clear">
-                        <label>Email
-                            <span class="required">*</span>
-                        </label>
-                        <input type="email" required="">
-                    </div>
-                    <div class="form-input clear">
-                        <label>Phone
-                        </label>
-                        <input type="tel">
-                    </div>
-                    <div class="form-input clear">
-                        <label>Message
-                            <span class="required">*</span>
-                        </label>
-                        <textarea required="required"></textarea>
-                    </div>
-                    <div class="form-input">
-                        <input type="submit" class="btn" value="Submit">
-                        <input type="reset" class="btn" value="Reset">
-                    </div>
+                <form>
+                    <ul>
+                        <li>
+                            <label>First name
+                                <span class="required">*</span>
+                            </label>
+                            <input type="text" required />
+                        </li>
+                        <li>
+                            <label>Email
+                                <span class="required">*</span>
+                            </label>
+                            <input type="email" required />
+                        </li>
+                        <li>
+                            <label>Phone</label>
+                            <input type="tel" />
+                        </li>
+                        <li>
+                            <label>Message
+                                <span class="required">*</span>
+                            </label>
+                            <textarea required></textarea>
+                        </li>
+                        <li>
+                            <input type="submit" value="Submit" />
+                            <input type="reset" value="Reset" />
+                        </li>
+                    </ul>
                 </form>
                 <div class="map">
                     <div id="map-canvas"></div>
